# kalshi_client

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  ruff.toml
examples/: basic_usage.py
src/kalshi_client/: __init__.py  kalshi_client.py
src/kalshi_client/configs/: kalshi_configs.py
src/kalshi_client/exceptions/: __init__.py  api_errors.py  auth_errors.py  rate_limit_errors.py  resource_errors.py  server_errors.py  validation_errors.py
src/kalshi_client/models/: __init__.py  account.py  base.py  market.py  response.py  trade.py
tests/: test_client.py  test_config.py  test_models.py  test_objectlist.py  test_responses.py
